# dict2md

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
examples/: example.py  example_docx.py
src/dict2md/: __init__.py  dict2docx.py  dict2md.py
